Retrotranslator Changelog
=================================

1.2.4
---------------------------------
  - Fixed a bug in translation of inner classes for Java 1.3 and earlier.
  - Added a workaround for a bug #4776385 in Sun JDK 1.2.2 for Windows.

1.2.3 (2007-10-28)
---------------------------------
  - Basic support for Java 1.1, 1.2, and 1.3.
  - Backports are loaded using the classpath option.
  - New option -smart to make backports inheritable.
  - Support for Java 5 methods of java.util.Properties.
  - Support for Java 5 methods of javax.net.ssl.HttpsURLConnection.
  - Support for SecurityException(String, Throwable), SecurityException(Throwable).
  - Limited support for java.lang.Thread.getState() and java.lang.Thread.getAllStackTraces().
  - Limited support for Java 5 methods of java.net.URLConnection and java.net.HttpURLConnection.
  - Limited support for java.util.Timer(String), java.util.Timer(String, boolean), java.util.Timer.purge().
  - Improved the -uptodatecheck functionality, in particular when translating jars.
  - Fixed a bug: Interface methods that override methods from java.lang.Object didn't work in certain cases.
  - Fixed a bug: Missing constructors passed verification when such constructors were present in base classes.
  - Fixed a bug: It wasn't possible to catch exceptions in java.lang.Thread.run() when using the advanced option.
  - Added a warning for a case when wrong classes are used for the verification.
  - With the -lazy option only translated classes are verified.
  - Upgraded to backport-util-concurrent 3.1.

1.2.2 (2007-06-25)
---------------------------------
  - Support for java.math.BigInteger.TEN.
  - Support for java.lang.Short.reverseBytes(short).
  - Support for java.lang.StackTraceElement(String, String, String, int).
  - Support for the append methods of java.io.StringWriter and java.io.CharArrayWriter.
  - Support for java.math.BigDecimal(char[]) and java.math.BigDecimal(char[], int, int). 