@@ -5,6 +5,7 @@ Retrotranslator Changelog
 ---------------------------------
   - Fixed a bug in translation of inner classes for Java 1.3 and earlier.
   - Added a workaround for a bug #4776385 in Sun JDK 1.2.2 for Windows.
+  - Fixed a bug: translated jar files didn't contain directory entries.
 
 1.2.3 (2007-10-28)
 ---------------------------------
